Add Binder link to Lecture 6 notebook

--- a/Lecture 6/machine_learning_python.ipynb
+++ b/Lecture 6/machine_learning_python.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#         Machine Learning in Python & Hands-on Training"
+    "#         Machine Learning in Python & Hands-on Training\n",
+    "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%206%2Fmachine_learning_python.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n"
    ]
   },
   {
