made some edits to the folder access code section

--- a/Lecture 6/machine_learning_python.ipynb
+++ b/Lecture 6/machine_learning_python.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "[<Collection id=rti_rwanda_crop_type_labels>, <Collection id=rti_rwanda_crop_type_source>, <Collection id=rti_rwanda_crop_type_raw>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,23 +318,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -342,14 +342,14 @@
       ],
       "text/plain": [
        "                                         source_file\n",
-       "0  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...\n",
-       "1  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...\n",
-       "2  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...\n",
-       "3  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...\n",
-       "4  /Users/hamed/Downloads/Extracted/rti_rwanda_cr..."
+       "0  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...\n",
+       "1  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...\n",
+       "2  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...\n",
+       "3  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...\n",
+       "4  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,16 +362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/hamed/Downloads/Extracted/rti_rwanda_crop_type_source/rti_rwanda_crop_type_source_2049'"
+       "'C:\\\\Users\\\\Maximus\\\\Downloads/Extracted/rti_rwanda_crop_type_source\\\\rti_rwanda_crop_type_source_0'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -441,43 +441,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
-       "      <td>forest</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
        "      <td>banana</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>maize</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
-       "      <td>forest</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>legumes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
-       "      <td>other</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>legumes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/Users/hamed/Downloads/Extracted/rti_rwanda_cr...</td>\n",
-       "      <td>other</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>structure</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         source_file   label\n",
-       "0  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...  forest\n",
-       "1  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...  banana\n",
-       "2  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...  forest\n",
-       "3  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...   other\n",
-       "4  /Users/hamed/Downloads/Extracted/rti_rwanda_cr...   other"
+       "                                         source_file      label\n",
+       "0  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...     banana\n",
+       "1  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...      maize\n",
+       "2  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...    legumes\n",
+       "3  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...    legumes\n",
+       "4  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...  structure"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,112 @@
     "    key_df = dataset_df[dataset_df[\"label\"]==key]\n",
     "    key_df = key_df.reset_index()\n",
     "    for row in key_df.iterrows():\n",
-    "        shutil.copy(row[1][\"source_file\"] + '/Image.png', downloads_path + '/Images/' + key + '/' + str(row[1]['index']) + '.png') "
+    "        shutil.copy(row[1][\"source_file\"] + '/Image.png', downloads_path + '/Images/' + key + '/' + str(row[1]['index']) + '.png')\n",
+    "        #the index of the image will be the name of the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>source_file</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>structure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>structure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>structure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>structure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...</td>\n",
+       "      <td>structure</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                        source_file      label\n",
+       "0      4  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...  structure\n",
+       "1      5  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...  structure\n",
+       "2      8  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...  structure\n",
+       "3      9  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...  structure\n",
+       "4     10  C:\\Users\\Maximus\\Downloads/Extracted/rti_rwand...  structure"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key_df.head() #illustrates how the copy works with respect to key_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Maximus\\\\Downloads/Extracted/rti_rwanda_crop_type_source\\\\rti_rwanda_crop_type_source_1000'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key_df.source_file[0] #the source_file contains the file, so we have to append the image location (Image.png)"
    ]
   },
   {
@@ -1403,7 +1508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
