update GDrive path

--- a/Lecture 10/CNN_Hurricane_RadiantEarth.ipynb
+++ b/Lecture 10/CNN_Hurricane_RadiantEarth.ipynb
@@ -38,17 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "PeSR9ITuR_bl"
    },
    "outputs": [],
    "source": [
-    "#from google.colab import drive\n",
-    "#drive.mount('/content/drive')\n",
-    "# To load the data from the shared Google drive, open the shared drive in your browser,\n",
-    "# right click on the folder, and select \"Add shortcut to Drive\". Now you should see it on your Google Drive.\n",
-    "\n",
     "import os\n",
     "import requests\n",
     "import tarfile\n",
@@ -104,51 +99,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Km1l_r7N63js"
-   },
-   "source": [
-    "### Download data using Google Drive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3z4kYsba6yeX"
-   },
-   "outputs": [],
-   "source": [
-    "# This option takes a long time and is not efficient\n",
-    "# Download labels (just the first time)\n",
-    "\"\"\"\n",
-    "url = 'https://drivendata-prod.s3.amazonaws.com/data/72/public/training_set_features.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYVI2LMPSY%2F20210107%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210107T192910Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=fdf00fde26278914bf06d141955923c595bcb907ad56b7b0512ebe9da6b82c57'\n",
-    "SaveName = 'training_set_features.csv'\n",
-    "urllib.request.urlretrieve(url,SaveName)\n",
-    "\n",
-    "url = 'https://drivendata-prod.s3.amazonaws.com/data/72/public/training_set_labels.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYVI2LMPSY%2F20210107%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210107T192910Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=d43bc536b1cb4cb1b56ce3c5f56f8220bb995254afc3aa3cf4b339d9a97edebd' \n",
-    "SaveName = 'training_set_labels.csv'\n",
-    "urllib.request.urlretrieve(url,SaveName)\n",
-    "\n",
-    "url = 'https://drivendata-prod.s3.amazonaws.com/data/72/public/test_set_features.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYVI2LMPSY%2F20210107%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210107T192910Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=6c82966d9815138e9c8c5dc4fa760bf011eee3a911e30a35ec5e4e35497534d5'\n",
-    "SaveName = 'test_set_features.csv' \n",
-    "urllib.request.urlretrieve(url,SaveName)\n",
-    "\"\"\"\n",
-    "\n",
-    "# Extract tar (unzip):\n",
-    "#directory = '/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data'\n",
-    "#tar = tarfile.open(f'{directory}/train-image.tgz', \"r:gz\")\n",
-    "#tar.extractall()\n",
-    "#tar.close()\n",
-    "\n",
-    "#directory = '/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data'\n",
-    "#tar = tarfile.open(f'{directory}/test-image.tgz', \"r:gz\")\n",
-    "#tar.extractall()\n",
-    "#tar.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "S2yYKmo_44Vv"
    },
    "source": [
@@ -199,15 +149,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To load the data from the shared Google drive, open the shared drive in your browser,\n",
+    "# right click on the folder, and select \"Add shortcut to Drive\". Now you should see it on your Google Drive.\n",
+    "#from google.colab import drive\n",
+    "#drive.mount('/content/drive')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "id": "ZRg6PFZNSSY-"
    },
    "outputs": [],
    "source": [
-    "directory ='/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data' # update this path to match where you have downloded the data in your Google account. \n",
+    "directory ='/content/drive/MyDrive/Lecture_10/' \n",
     "train_metadata  = pd.read_csv(f'{directory}/training_set_features.csv')\n",
     "train_labels = pd.read_csv(f'{directory}/training_set_labels.csv')\n",
-    "directory = '.'"
+    "#directory = '.'"
    ]
   },
   {
@@ -700,7 +662,7 @@
    ],
    "source": [
     "# load a single image and see how the resizing works:\n",
-    "img = mpimg.imread('/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/sample_img_abs_010.jpg')\n",
+    "img = mpimg.imread(f'{directory}/sample_img_abs_010.jpg')\n",
     "print('Original image shape=',img.shape)\n",
     "plt.figure(figsize=[4.5,4])\n",
     "plt.pcolor(img, cmap='RdYlBu')\n",
@@ -866,7 +828,7 @@
     "            x_train = np.stack(([resize_crop_img(mpimg.imread(train.file_name.iloc[x])/255) \\\n",
     "                                for x in range(chunk_size*i,chunk_size*(i+1))]),\n",
     "                               axis=2).transpose(2, 0, 1).reshape(chunk_size,64,64,1)\n",
-    "        np.save(f'/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/chunks/x_train_part_{i:03.0f}.npy',\n",
+    "        np.save(f'{directory}/chunks/x_train_part_{i:03.0f}.npy',\n",
     "                x_train, allow_pickle=False)\n",
     "\n",
     "    elif period == 'val':\n",
@@ -878,7 +840,7 @@
     "            x_val = np.stack(([resize_crop_img(mpimg.imread(val.file_name.iloc[x])/255) \\\n",
     "                                for x in range(chunk_size*i,chunk_size*(i+1))]),\n",
     "                             axis=2).transpose(2, 0, 1).reshape(chunk_size,64,64,1)\n",
-    "        np.save(f'/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/chunks/x_val_part_{i:03.0f}.npy',\n",
+    "        np.save(f'{directory}/chunks/x_val_part_{i:03.0f}.npy',\n",
     "                x_val, allow_pickle=False)"
    ]
   },
@@ -905,7 +867,7 @@
    "outputs": [],
    "source": [
     "# Stacking images\n",
-    "dir_str = '/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/chunks'\n",
+    "dir_str = f'{directory}/chunks'\n",
     "x_train = np.concatenate(([np.load(f'{dir_str}/x_train_part_{i:03.0f}.npy') for i in range(57)]),\n",
     "                    axis=0)\n",
     "x_val = np.concatenate(([np.load(f'{dir_str}/x_val_part_{i:03.0f}.npy') for i in range(14)]),\n",
@@ -965,9 +927,9 @@
    },
    "outputs": [],
    "source": [
-    "#np.save(f'/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/x_train.npy',\n",
+    "#np.save(f'{directory}/x_train.npy',\n",
     "#                x_train, allow_pickle=False)\n",
-    "#np.save(f'/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/x_val.npy',\n",
+    "#np.save(f'{directory}/x_val.npy',\n",
     "#                x_val, allow_pickle=False)"
    ]
   },
@@ -988,7 +950,6 @@
    },
    "outputs": [],
    "source": [
-    "directory ='/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data'\n",
     "test_metadata  = pd.read_csv(f'{directory}/test_set_features.csv')"
    ]
   },
@@ -1033,7 +994,7 @@
     "        x_test = np.stack(([resize_crop_img(mpimg.imread(test_metadata.file_name.iloc[x])/255) \\\n",
     "                            for x in range(chunk_size*i,chunk_size*(i+1))]),\n",
     "                            axis=2).transpose(2, 0, 1).reshape(chunk_size,64,64,1)\n",
-    "    np.save(f'/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/chunks/x_test_part_{i:03.0f}.npy',\n",
+    "    np.save(f'{directory}/chunks/x_test_part_{i:03.0f}.npy',\n",
     "            x_test, allow_pickle=False)"
    ]
   },
@@ -1061,7 +1022,7 @@
    "outputs": [],
    "source": [
     "# Stacking images\n",
-    "dir_str = '/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/chunks'\n",
+    "dir_str = f'{directory}/chunks'\n",
     "x_test = np.concatenate(([np.load(f'{dir_str}/x_test_part_{i:03.0f}.npy') for i in range(45)]),\n",
     "                    axis=0)"
    ]
@@ -1676,7 +1637,7 @@
    ],
    "source": [
     "# Loading the pretrained model (if already available):\n",
-    "model.load_weights(\"/content/drive/MyDrive/Colab Notebooks/AI_4_wind/saved_model/\")"
+    "model.load_weights(f'{directory}') "
    ]
   },
   {
@@ -1800,7 +1761,7 @@
    "source": [
     "val['prediction'] = preds.model.values.astype(int)\n",
     "val = val.drop(columns=['file_name'])\n",
-    "val.to_csv(f'/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Predictions/prediction_val_Radiant.csv')"
+    "# val.to_csv('prediction_val_Radiant.csv')"
    ]
   },
   {
@@ -1930,8 +1891,8 @@
    },
    "outputs": [],
    "source": [
-    "x_test = np.load('/content/drive/MyDrive/Lecture_10/x_test.npy')\n",
-    "test_metadata  = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Data/test_set_features.csv')"
+    "x_test = np.load(f'{directory}/x_test.npy')\n",
+    "test_metadata  = pd.read_csv(f'{directory}/test_set_features.csv')"
    ]
   },
   {
@@ -1972,7 +1933,7 @@
    "outputs": [],
    "source": [
     "test_metadata['prediction'] = test_pred[:,0]\n",
-    "test_metadata.to_csv(f'/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Predictions/prediction_test_Radiant.csv')"
+    "test_metadata.to_csv('prediction_test_Radiant.csv')"
    ]
   },
   {
@@ -1983,7 +1944,6 @@
    },
    "outputs": [],
    "source": [
-    "directory = '/content/drive/MyDrive/Colab Notebooks/AI_4_wind/Predictions'\n",
     "test_metadata['wind_speed'] = test_metadata.prediction.apply(lambda x: round(x))"
    ]
   },
@@ -1996,7 +1956,7 @@
    "outputs": [],
    "source": [
     "#saving submission\n",
-    "test_metadata[['image_id','wind_speed']].set_index('image_id').to_csv(f'{directory}/Submission_Radiant.csv')"
+    "test_metadata[['image_id','wind_speed']].set_index('image_id').to_csv('Submission_Radiant.csv')"
    ]
   },
   {
@@ -2063,7 +2023,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save_weights(\"/content/drive/MyDrive/Colab Notebooks/AI_4_wind/saved_model/\")"
+    "model.save_weights(\".\")"
    ]
   },
   {
